<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2014 Jorge Ruesga
     Copyright (C) 2014 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
<resources
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- The application name -->
    <string name="app_name" translatable="false">PhotoPhase</string>
    <!-- The app description -->
    <string name="app_description">PhotoPhase Live Wallpaper</string>

    <!-- No images message -->
    <string name="no_pictures_oops_msg">No pictures found</string>

    <!-- Menus -->
    <string name="mnu_ok" translatable="false">@android:string/ok</string>
    <string name="mnu_restore">Restore</string>
    <string name="mnu_delete">Delete</string>
    <string name="mnu_settings">Settings</string>
    <string name="mnu_select_all">Select all</string>
    <string name="mnu_deselect_all">Deselect all</string>
    <string name="mnu_invert">Invert</string>
    <string name="mnu_select_album">Select album</string>
    <string name="mnu_deselect_album">Deselect album</string>

    <!-- Formats -->
    <string name="format_disabled">Disabled</string>
    <string name="format_rotate_only">On rotation</string>
    <string name="format_seconds">%s sec.</string>
    <string name="format_minutes">%s min.</string>
    <string name="format_hours">%s h.</string>
    <string name="format_days">%s d.</string>
    <string name="format_dim">%s%%</string>

    <!-- Preferences -->
    <string name="pref_general">General</string>
    <string name="pref_general_summary">General settings, effects and transitions</string>
    <string name="pref_general_settings">Settings</string>
    <string name="pref_general_settings_wallpaper_dim">Wallpaper dim</string>
    <string name="pref_general_settings_background_color">Background color</string>
    <string name="pref_general_settings_background_color_summary">Set the background color</string>
    <string name="pref_general_touch_action">Touch action</string>
    <string name="pref_general_touch_action_summary_format"><xliff:g id="action_summary">%1$s</xliff:g> when touching a frame</string>
    <string name="pref_general_aspect_ratio_correction">Aspect ratio</string>
    <string name="pref_general_aspect_ratio_correction_summary">Try to fix the picture\'s aspect ratio by cropping it to fit the destination frame</string>

    <string name="pref_general_transitions">Transitions</string>
    <string name="pref_general_transitions_types">Types</string>
    <string name="pref_general_transitions_types_summary_format"><xliff:g id="selected">%1$d</xliff:g> of <xliff:g id="total">%2$d</xliff:g> types selected</string>
    <string name="pref_general_transitions_interval">Interval</string>
    <string name="pref_general_effects">Effects</string>
    <string name="pref_general_effects_types">Types</string>
    <string name="pref_general_effects_types_summary_format"><xliff:g id="selected">%1$d</xliff:g> of <xliff:g id="total">%2$d</xliff:g> image effects selected</string>

    <string name="pref_media">Media</string>
    <string name="pref_media_summary">Albums to be displayed, refresh interval, and other media settings</string>
    <string name="pref_media_settings">Settings</string>
    <string name="pref_media_settings_refresh_interval">Refresh interval</string>
    <string name="pref_media_settings_refresh_interval_disable">Searching for new pictures is disabled</string>
    <string name="pref_media_settings_refresh_interval_summary">Search for new pictures every <xliff:g id="interval">%1$s</xliff:g></string>
    <string name="pref_media_settings_refresh_now">Refresh now</string>
    <string name="pref_media_settings_refresh_now_summary">Manually refresh the picture database</string>
    <string name="pref_media_pictures">Pictures</string>
    <string name="pref_media_albums">Albums</string>
    <string name="pref_media_albums_summary">Set the albums and pictures that will be displayed on the wallpaper</string>
    <string name="pref_media_auto_select_new">Auto select albums</string>
    <string name="pref_media_auto_select_new_summary">Automatically select new albums when media discovery occurs</string>

    <string name="pref_layout">Layout</string>
    <string name="pref_layout_summary">Positioning of pictures on the screen</string>
    <string name="pref_layout_disposition">Arrangement</string>
    <string name="pref_random_dispositions">Random</string>
    <string name="pref_random_dispositions_summary">Generate random arrangements at a chosen interval</string>
    <string name="pref_random_dispositions_interval">Interval</string>
    <string name="pref_disposition_portrait">Portrait arrangement</string>
    <string name="pref_disposition_landscape">Landscape arrangement</string>
    <plurals name="pref_disposition_summary_format">
        <item quantity="one">1 image is shown in <xliff:g id="orientation">%2$s</xliff:g></item>
        <item quantity="other"><xliff:g id="count">%1$d</xliff:g> images are shown in <xliff:g id="orientation">%2$s</xliff:g></item>
    </plurals>
    <string name="disposition_orientation_portrait">portrait orientation</string>
    <string name="disposition_orientation_landscape">landscape orientation</string>

    <!-- [2 lines one for describe long tap and another for describe swipe] -->
    <string name="pref_disposition_description">Long tap a frame and drag \u0026 drop its borders. Swipe left and right to show defined templates</string>
    <string name="pref_disposition_template">Template <xliff:g id="number_of_template">%1$s</xliff:g> of <xliff:g id="total_of_templates">%2$s</xliff:g></string>
    <string name="pref_disposition_unable_delete_advise">Unable to delete the selected frame</string>

    <string name="pref_about">About</string>
    <string name="pref_about_summary">PhotoPhase v<xliff:g id="version">%1$s</xliff:g>\nCopyright \u00A9 2014 Jorge Ruesga</string>

    <!-- Refresh intervals -->
    <string name="refresh_intervals_disabled">Disabled</string>
    <string name="refresh_intervals_1h">1 hour</string>
    <string name="refresh_intervals_4h">4 hours</string>
    <string name="refresh_intervals_1d">1 day</string>
    <string name="refresh_intervals_2d">2 days</string>
    <string name="refresh_intervals_1w">1 week</string>

    <!-- Touch actions -->
    <string name="touch_actions_none">None</string>
    <string name="touch_actions_transition">Perform transition</string>
    <string name="touch_actions_open">Open</string>
    <string name="touch_actions_share">Share</string>
    <string name="touch_actions_none_summary">Do nothing</string>
    <string name="touch_actions_transition_summary">Perform image transition</string>
    <string name="touch_actions_open_summary">Open the image</string>
    <string name="touch_actions_share_summary">Share the image</string>

    <!-- Transitions -->
    <string name="transitions_cube">Cube</string>
    <string name="transitions_fade">Fade</string>
    <string name="transitions_flip">Flip</string>
    <string name="transitions_swap">Swap</string>
    <string name="transitions_translation">Translation</string>
    <string name="transitions_window">Window</string>

    <!-- Effects -->
    <string name="effects_noeffect">Normal</string>
    <string name="effects_autofix">Autofix</string>
    <string name="effects_blur">Blur</string>
    <string name="effects_crossprocess">Cross process</string>
    <string name="effects_documentary">Documentary</string>
    <string name="effects_duotone">Duotone</string>
    <string name="effects_emboss">Emboss</string>
    <string name="effects_fisheye">Fisheye</string>
    <string name="effects_glow">Glow</string>
    <string name="effects_grain">Grain</string>
    <string name="effects_grayscale">Grayscale</string>
    <string name="effects_halftone">Halftone</string>
    <string name="effects_lomoish">Lomo-ish</string>
    <string name="effects_mirror">Mirror</string>
    <string name="effects_negative">Negative</string>
    <string name="effects_outline">Outline</string>
    <string name="effects_pixelate">Pixelate</string>
    <string name="effects_popart">Pop art</string>
    <string name="effects_posterize">Posterize</string>
    <string name="effects_saturate">Saturate</string>
    <string name="effects_scanlines">Scanlines</string>
    <string name="effects_sepia">Sepia</string>
    <string name="effects_temperature">Temperature</string>
    <string name="effects_tint">Tint</string>
    <string name="effects_vignette">Vignette</string>

    <!-- ColorPickerDialog -->
    <string name="color_picker_alpha_slider_text">Alpha</string>
    <string name="color_picker_current_text">Current:</string>
    <string name="color_picker_new_text">New:</string>
    <string name="color_picker_color">Color:</string>

    <!-- Changelog dialog -->
    <string name="changelog_title">Changelog</string>
</resources>
