<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Settings -->
    <PreferenceCategory
        android:key="category_settings"
        android:title="@string/pref_general_settings">

        <!-- Dim screen -->
        <org.cyanogenmod.wallpapers.photophase.preferences.SeekBarProgressPreference
            android:key="ui_wallpaper_dim"
            android:title="@string/pref_general_settings_wallpaper_dim"
            android:summary="@string/pref_general_settings_wallpaper_dim_summary"
            android:persistent="true"
            android:defaultValue="0" />

        <!-- Background color -->
        <org.cyanogenmod.wallpapers.photophase.widgets.ColorPickerPreference
            android:key="ui_background_color"
            android:title="@string/pref_general_settings_background_color"
            android:summary="@string/pref_general_settings_background_color_summary"
            android:persistent="true"
            android:defaultValue="@color/wallpaper_background_color" />

        <!-- Touch action -->
        <ListPreference
            android:key="ui_touch_action"
            android:title="@string/pref_general_touch_action"
            android:summary="@string/pref_general_touch_action_summary"
            android:persistent="true"
            android:entries="@array/touch_actions_labels"
            android:entryValues="@array/touch_actions_values"
            android:defaultValue="0" />

        <!-- Aspect ratio correction -->
        <CheckBoxPreference
            android:key="ui_fix_aspect_ratio"
            android:title="@string/pref_general_aspect_ratio_correction"
            android:summary="@string/pref_general_aspect_ratio_correction_summary"
            android:persistent="true"
            android:defaultValue="true" />

    </PreferenceCategory>

    <!-- Transitions -->
    <PreferenceCategory
        android:key="category_transitions"
        android:title="@string/pref_general_transitions">

        <!-- Types -->
        <MultiSelectListPreference
            android:key="ui_transition_types"
            android:title="@string/pref_general_transitions_types"
            android:summary="@string/pref_general_transitions_types_summary"
            android:persistent="true"
            android:entries="@array/transitions_labels"
            android:entryValues="@array/transitions_values"
            android:defaultValue="@array/transitions_default" />

        <!-- Transitions Interval -->
        <org.cyanogenmod.wallpapers.photophase.preferences.SeekBarProgressPreference
            android:key="ui_transition_interval"
            android:title="@string/pref_general_transitions_interval"
            android:summary="@string/pref_general_transitions_interval_summary"
            android:persistent="true"
            android:defaultValue="2" />

    </PreferenceCategory>

    <!-- Effects -->
    <PreferenceCategory
        android:key="category_effects"
        android:title="@string/pref_general_effects">

        <!-- Transitions -->
        <MultiSelectListPreference
            android:key="ui_effect_types"
            android:title="@string/pref_general_effects_types"
            android:summary="@string/pref_general_effects_types_summary"
            android:persistent="true"
            android:entries="@array/effects_labels"
            android:entryValues="@array/effects_values"
            android:defaultValue="@array/effects_default" />

    </PreferenceCategory>

</PreferenceScreen>
